# Generative-AI

./: LICENSE  README.md
GraphRag/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  check_key.py  d1.json  d2.json  d3.json  docker-compose.yml  pyproject.toml  requirements.txt  test_gnn.py  test_hybrid.py
GraphRag/.claude/: settings.local.json
GraphRag/api/: limiter.py  main.py
GraphRag/api/auth/: __init__.py  dependencies.py  google.py
GraphRag/api/routes/: auth.py  corrections.py  evaluation.py  ingest.py  kg_features.py  query.py
GraphRag/config/: settings.yml
GraphRag/config/ontologies/: aerospace_regulatory.yml  synthetic_large.yml
GraphRag/docs/: cypher-patterns.md  entity-resolution.md  knowledge-graph-architecture.md
GraphRag/docs/adr/: 0002-forward-chaining-over-backward-chaining.md
GraphRag/eval_data/: calibration_set.json
GraphRag/fly/: deploy.ps1
GraphRag/fly/api/: fly.toml
GraphRag/fly/dashboard/: fly.toml
GraphRag/fly/neo4j/: fly.toml
GraphRag/fly/rabbitmq/: fly.toml
GraphRag/graphrag/agents/: base_agent.py  evaluation_agent.py  ingestion_agent.py  query_agent.py
GraphRag/graphrag/business_matrix/: __init__.py  dashboard_server.py  kpi_store.py  (+1 more)
GraphRag/scripts/: build_communities.py  calibrate_gnn.py  community_rebuild.py  demo_regulatory.py  entity_type_migration.py  export_rdf.py  generate_synthetic_ontology.py  init_neo4j.py  kg_backup.py  maintenance.py  re_embed.py
GraphRag/tasks/: lessons.md  todo.md
GraphRag/workers/: evaluation_worker.py  ingestion_worker.py  query_worker.py
(+702 files in other folders)
