[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphrag*", "api*", "workers*"]

[tool.pytest.ini_options]
asyncio_mode        = "auto"          # no need for @pytest.mark.asyncio on every test
asyncio_default_fixture_loop_scope = "function"
testpaths           = ["tests"]
addopts             = "-v --tb=short"
filterwarnings      = [
    "ignore::DeprecationWarning:scipy",
    "ignore::numba.core.errors.NumbaDeprecationWarning",
]
